# Automated-Quality-Inspection-Station

./: .gitignore  README.md  main.py  pyproject.toml  train.py  train_colab.ipynb
EDA/: exploration.ipynb
models/pcb_defects_yolov8m/: args.yaml
scripts/: convert_voc_to_yolo.py  visualize.ipynb
